--- a/GitHub/5初步总结.md
+++ b/GitHub/5初步总结.md
@@ -1,8 +1,8 @@
 <img src="D:\File_Recv\日语学习\git三大空间.jpg" alt="git三大空间" style="zoom:50%;" />
 
-###### 活用git reset 
+###### git reset ????????????????????????????????
 
-- git checkout  文件名 相当于撤销改动
+- git reset  文件名 **撤消add：**git reset 文件名
 - git reset --head 文件名 客观上是绿色变红色
 - git reset --soft 序列号 
   - 只让**repository**中的内容和 **reset** 目标节点保持一致，不是简单的回退
