--- a/批处理程序/01.md
+++ b/批处理程序/01.md
@@ -12,7 +12,7 @@
 - @echo off 关闭 盘符与文件夹显示
 
 - 在批处理文件中，想要看到运行效果，需要在语句中加入“pause”
-- 强烈建议加入@echo off 和pause！
+- 强烈建议加入@echo off 和pause ！
 
 
 
@@ -64,12 +64,12 @@
   
   - 组策略 group policy
   
-    - security policy-secpol.msc
-    - group policy edit-gpedt.msc
+    - security policy   secpol.msc
+    - group policy     edit-gpedt.msc
     - 组策略结果集 result of group policy rsop.msc
-    - local users management-lusrmgr（家庭版没办法用）
+    - local users management   lusrmgr（家庭版没办法用）
   
-  - 控制台 mmc（micro control console
+  - 控制台 mmc（micro manager? control console
   
   - 注册表 regedit registry（） edit
   
